Basic layout structure

--- a/src/scss/base/_settings.scss
+++ b/src/scss/base/_settings.scss
@@ -1,8 +1,14 @@
-$base-gap: 17px;
+$base-gap: 16px;
+$window-header-height: 64px;
+$window-footer-height: 30px;
 
 $bg-color: white;
 $text-color: #333;
+$text-secondary-color: #777;
 $link-color: green;
 $link-dim-color: purple;
 
+$sep-color: #e5e5e5;
+
 $window-header-bg-color: #bg-color;
+$window-footer-bg-color: #bg-color;
