--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,5 +1,5 @@
 @mixin font-body() {
-    font-family: Inter, sans-serif;
+    @include font-ui-pos('small','normal');
 }
 
 
@@ -8,12 +8,14 @@
 
     font-style: normal;
     font-weight: 600;
+    font-size: 24px;
 }
 
 
-@mixin font-subhed() {
+@mixin font-small() {
     @include font-body;
 
     font-style: normal;
-    font-weight: 300;
+    font-weight: normal;
+    font-size: 10px;
 }
