--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,7 @@ $is-debug: false;
 @import "layouts/layout-main";
 @import "layouts/layout-window-header";
 @import "layouts/layout-window-footer";
+@import "layouts/layout-selector";
 
 
 // MODULES
